[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Script/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
